Refactor: resolve all threads